# deptrace

./: Cargo.toml  README.md  deptrace.toml
deptrace/: Cargo.toml
deptrace/src/: dependency.rs  lib.rs  plugin.rs  project.rs  target.rs  warning_sink.rs
deptrace/tests/: cyclic_dependencies.deptrace.toml  gen_stresstest.py  stresstest.deptrace.toml  test_deptrace_toml_files.rs
deptrace_cli/: Cargo.toml
deptrace_cli/src/: cli.rs  main.rs
deptrace_config/: Cargo.toml
deptrace_config/src/: dependency.rs  lib.rs  plugin.rs  project.rs  target.rs
examples/foo_dylib/: Cargo.toml
examples/foo_dylib/src/: lib.rs
examples/foo_lib/: Cargo.toml
examples/foo_lib/src/: lib.rs
examples/maximum_configuration/: Cargo.toml  build.rs  deptrace.toml
examples/maximum_configuration/src/: main.rs
examples/no_config_cargo/: Cargo.toml
plugins/cargo/: Cargo.toml
plugins/cargo/src/: lib.rs
